--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "dotenv": "^17.2.3",
     "prettier": "^3.6.0",
     "prettier-plugin-tailwindcss": "^0.7.1",
+    "prisma": "^7.2.0",
     "turbo": "^2.7.2"
   },
   "engines": {
