--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,7 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
-    "@repo/ui": "*",
+    "@workspace/ui": "workspace:*",
     "next": "16.0.10",
     "react": "^19.2.0",
     "react-dom": "^19.1.0"
