--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,8 +11,12 @@
     "check-types": "next typegen && tsc --noEmit"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.10",
     "@workspace/ui": "workspace:*",
+    "@workspace/utils": "workspace:*",
+    "jsonwebtoken": "^9.0.3",
     "next": "16.0.10",
+    "next-auth": "^4.24.13",
     "react": "^19.2.0",
     "react-dom": "^19.1.0"
   },
