--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -8,7 +8,8 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "@workspace/ui/*" : ["../../packages/ui/src/*"]
+      "@workspace/ui/*" : ["../../packages/ui/src/*"],
+      "@workspace/utils/*" : ["../../packages/utils/src/*"]
     }
   },
   "include": [
