--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -1,34 +1,38 @@
 {
   "compilerOptions": {
     // Environment setup & latest features
-    "outDir" : "dist",
-    "lib": ["ESNext"],
+    "outDir": "dist",
+    "lib": [
+      "ESNext"
+    ],
     "target": "ESNext",
     "module": "Preserve",
     "moduleDetection": "force",
     "allowJs": true,
     "baseUrl": ".",
     "paths": {
-      "@workspace/db/*" : ["../db/src/*.ts"],
-      "@workspace/utils/*" : ["./src/*"]
+      "@workspace/db/*": [
+        "../db/src/*"
+      ],
+      "@workspace/utils/*": [
+        "./src/*"
+      ]
     },
-
     // Bundler mode
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "noEmit": true,
-    "esModuleInterop" : true,
-
+    "esModuleInterop": true,
     // Best practices
     "strict": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
     "noImplicitOverride": true,
-
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-  }
+    "noPropertyAccessFromIndexSignature": false,
+  },
+  "include": ["src", "../types/**/*.d.ts"]
 }
