--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -9,7 +9,8 @@
     "baseUrl": ".",
     "paths": {
       "@workspace/ui/*" : ["../../packages/ui/src/*"],
-      "@workspace/utils/*" : ["../../packages/utils/src/*"]
+      "@workspace/utils/*" : ["../../packages/utils/src/*"],
+      "@workspace/db/*" : ["../../packages/db/src/*"]
     },
     "typeRoots": ["../../packages/types"]
   },
